# mongo-vapi

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  TODO.md  compose.py  meson.build  meson_options.txt
example/: BconDoc.vala  Cruds.vala
partials/: bson.bson.vapi  client.mongoc.vapi  collection.mongoc.vapi  concern.mongoc.vapi  cursor.mongoc.vapi  database.mongoc.vapi  entities.bson.vapi  funcs.mongoc.vapi  iter.bson.vapi  other.bson.vapi  uri.mongoc.vapi
partials/bson/: bson.vapi  entities.vapi  iter.vapi  others.vapi  reader.vapi  string.vapi
partials/libbson/: Bcon.vapi  Bson.vapi  BsonIter.vapi  BsonReader.vapi  BsonString.vapi  BsonValue.vapi  BsonVisitor.vapi  Enums.vapi  Methods.vapi  Structs.vapi
partials/libmongoc/: APMCallbacks.vapi  BulkOperation.vapi  Callbacks.vapi  Client.vapi  ClientEncryption.vapi  ClientPool.vapi  ClientSession.vapi  Collection.vapi  Cursor.vapi  Database.vapi  Flags.vapi  GridFS.vapi  Operation.vapi  Opts.vapi  Others.vapi  Prefs.vapi  Query.vapi  Socket.vapi  Stream.vapi  Transaction.vapi  Uri.vapi  client.vapi  cursor.vapi
partials/mongoc/: Prefs.vapi  client.vapi  concern.vapi  uri.vapi
samples/: BconDoc.vala  Cruds.vala  HelloMongo.vala  meson.build
test/: StatusTest.vala  crud.vala  meson.build  status.vala
vapi/: libmongoc-1.0.vapi
