option(
    'verbose',
    type : 'boolean',
    value : false,
    description : 'Set compose.py verbose output.'
)

option(
    'onefile',
    type : 'boolean',
    value : true,
    description : 'Set compose.py single file output.'
)

option(
    'test',
    type : 'boolean',
    value : true,
    description : 'Build status test.'
)

option(
    'example',
    type : 'boolean',
    value : true,
    description : 'Build bindings examples.'
)
